# ChessGame

./: .gitignore  CMakeLists.txt  README.md
graphics 4.27/: ChessGame2.uproject
graphics 4.27/Config/: DefaultEngine.ini
graphics 4.27/Content/: Actor_Blueprint.uasset  MouseGameMode.uasset  None__PiezasAjedrezDiffuse_psd.uasset  None__TableroDiffuse_psd.uasset  Pawn.uasset  PieceController.uasset  PiezasAjedrez.uasset  PiezasAjedrez_Torre_Skeleton.uasset  Queen.uasset  Rook.uasset
graphics 4.27/Saved/SourceControl/: UncontrolledChangelists.json
graphics/Config/: DefaultEngine.ini  DefaultGame.ini
graphics/Content/: Actor_Blueprint.uasset  Bishop.uasset  King.uasset  Knight.uasset  PiezasAjedrez_Alfil_Skeleton.uasset  PiezasAjedrez_Caballo_Skeleton.uasset  PiezasAjedrez_Cube_Skeleton.uasset  PiezasAjedrez_Peon_Skeleton.uasset  PiezasAjedrez_Reina_Skeleton.uasset  PiezasAjedrez_Rey_Skeleton.uasset  obj0Mat.uasset
graphics/Content/Meshes/: MyCube.uasset
graphics/Saved/Backup/: Actor_Blueprint_2023-04-07-14-50-22.uasset  Actor_Blueprint_2023-04-07-14-58-26.uasset  Actor_Blueprint_2023-04-07-15-10-09.uasset  Actor_Blueprint_2023-04-07-15-19-55.uasset  Actor_Blueprint_2023-04-07-15-37-34.uasset  Actor_Blueprint_2023-04-07-15-57-39.uasset  Actor_Blueprint_2023-04-11-10-35-55.uasset  Actor_Blueprint_2023-04-11-10-48-57.uasset  Actor_Blueprint_2023-04-11-11-23-39.uasset  Actor_Blueprint_2023-04-11-11-30-32.uasset  Actor_Blueprint_2023-04-11-11-39-48.uasset  Actor_Blueprint_2023-04-11-11-52-28.uasset  Actor_Blueprint_2023-04-11-12-01-46.uasset  Actor_Blueprint_2023-04-11-12-11-57.uasset  Actor_Blueprint_2023-04-15-10-48-35.uasset  Actor_Blueprint_2023-04-15-11-14-59.uasset  Actor_Blueprint_2023-04-15-11-20-19.uasset  (+67 more)
include/: board.h  move.h  piece.h  position.h  user.h  users.h
src/: board.cpp  main.cpp  piece.cpp  user.cpp  users.cpp
tests/: tests.cpp
unreal engine/Content/: Board.umap  Board_BuiltData.uasset
(+109 files in other folders)
